modificaciones al modulo de CNV y cambio de estilo

--- a/iafas/src/main/webapp/mainContenedor.xhtml
+++ b/iafas/src/main/webapp/mainContenedor.xhtml
@@ -11,7 +11,7 @@
 </head>
 <body style="background-color: white; opacity: 0.7;">
 	<center>
-		<h:graphicImage value="img/logoIAFAS.png" width="600px" height="500px"></h:graphicImage>
+		<h:graphicImage value="img/logoIAFAS.png" width="600px" height="100%"></h:graphicImage>
 	</center>
 </body>
 </html>
