--- a/iafas/src/main/webapp/mainPrincipal2.xhtml
+++ b/iafas/src/main/webapp/mainPrincipal2.xhtml
@@ -209,7 +209,7 @@
 					</div>
 					</nav>
 					<div class="pcoded-content">
-						<iframe id="framecontent" width="100%" height="550px"
+						<iframe id="framecontent" width="100%" height="900"
 							src="mainContenedor.xhtml" name="iframe" frameborder="0" />
 					</div>
 				</div>
