--- a/iafas/src/main/webapp/mainAlmacenSalida.xhtml
+++ b/iafas/src/main/webapp/mainAlmacenSalida.xhtml
@@ -107,7 +107,7 @@ button.ui-button {
 				 -->	
 			</p:panelGrid>
 			
-			<p:panel header="Datos Encontrados">
+			<p:panel >
 			
 				<p:panelGrid columns="6" styleClass="panel">
 				
